fixtures/errors/json_parse_invalid_number_negative_leading_zero.js
try {
  JSON.parse("-01");
  console.log("no-throw");
} catch (e) {
  console.log("caught-name:", e.name);
}
